--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+.container{
+    display: flex;
+  
+}
+
 .grid {
     width: 200px;
     height: 400px;
@@ -11,27 +16,24 @@
 .grid div{
     height: 20px;
     width: 20px;
-    /* background-color: rgb(44, 143, 236); */
-    /* border: 1px solid black; */
-
 }
 
 .tetromino{
     background-color:blueviolet;
+    outline: 1px solid black;
 }
 
 
 .mini-grid{
+    margin-left: 30px;
     width: 80px;
     height: 80px;
+    display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
     background-color:rgb(132, 214, 112);
-    margin-left: 30px;
 }
 
-.container{
-    display: flex;
-  
+.mini-grid div{
+    height: 20px;
+    width: 20px;
 }
