--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,34 @@
 body{
     font-family: Roboto, serif;
+    color: rgb(240, 158, 90);
+    text-shadow: 1px 1px 4px rgb(250, 50, 50);
+}
+
+.mainContainer {
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 20px;
+    padding-right: 20px;
+    
+    background-image: url("../images/bg.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 96vh;
+
+
 }
 
 button{
     font-family: inherit;
     font-size: 25px;
+    color: #fff;
     border:none;
-    background-color: rgb(192, 47, 211);
+    background-color: rgba(94, 131, 209, 0.705);
     border-radius: 3px;
     margin: 30px;
     box-shadow: 3px 4px 2px 1px rgba(0, 0, 255, .2);
+    outline: none;
 }
 
 .container{
@@ -19,15 +38,18 @@ button{
 
 .grid {
     box-shadow: 3px 4px 2px 1px rgba(153, 153, 248, 0.2);
-    width: 200px;
-    height: 400px;
-    
+    min-width: 200px;
+    min-height: 400px;
+    max-width: 200px;
+    max-height: 400px;
 
-background-image: linear-gradient(
-    to bottom,
-    rgb(121, 235, 27),
-    rgb(233, 85, 17)
-  );
+    margin-left: 50px;
+
+    background-image: linear-gradient(
+        to bottom,
+        rgba(155, 211, 233, 0.521),
+        rgba(233, 85, 17, 0.466)
+    );
 
     display: flex;
     flex-wrap: wrap;
@@ -38,6 +60,7 @@ background-image: linear-gradient(
 .grid div{
     height: 20px;
     width: 20px;
+
 }
 
 .tetromino{
@@ -49,14 +72,22 @@ background-image: linear-gradient(
 .mini-grid{
     box-shadow: 3px 4px 2px 1px rgba(0, 0, 255, .2);
     margin-left: 30px;
-    width: 80px;
-    height: 80px;
+    margin-right: 30px;
+    min-width: 80px;
+    min-height: 80px;
+    max-width: 80px;
+    max-height: 80px;
+
     display: flex;
     flex-wrap: wrap;
-    background-color:rgb(132, 214, 112);
+    background-color:rgba(132, 214, 112, 0.568);
 }
 
 .mini-grid div{
     height: 20px;
     width: 20px;
+}
+
+.level{
+    margin-right: 30px;
 }
