--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,86 @@
+/* Указываем box sizing */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Убираем внутренние отступы */
+ul[class],
+ol[class] {
+  padding: 0;
+}
+
+/* Убираем внешние отступы */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+ul[class],
+ol[class],
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+
+/* Выставляем основные настройки по-умолчанию для body */
+body {
+  min-height: 100vh;
+  scroll-behavior: smooth;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+}
+
+/* Удаляем стандартную стилизацию для всех ul и il, у которых есть атрибут class*/
+ul[class],
+ol[class] {
+  list-style: none;
+}
+
+/* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+
+/* Упрощаем работу с изображениями */
+img {
+  max-width: 100%;
+  display: block;
+}
+
+/* Указываем понятную периодичность в потоке данных у article*/
+article > * + * {
+  margin-top: 1em;
+}
+
+/* Наследуем шрифты для инпутов и кнопок */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+
+
+
 body{
     font-family: Roboto, serif;
-    color: rgb(240, 158, 90);
+    font-size: 12px;
+    color: rgb(238, 190, 151);
     text-shadow: 1px 1px 4px rgb(250, 50, 50);
 }
 
 .mainContainer {
     margin-left: auto;
     margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 20px;
     
     background-image: url("../images/bg.png");
     background-repeat: no-repeat;
@@ -16,19 +88,57 @@ body{
     background-size: cover;
     height: 96vh;
 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
 }
 
+.displays{
+    display: flex;
+    font-display: row;
+}
+.scoreLvlDsp{
+    margin-right: 20px;
+}
 button{
     font-family: inherit;
-    font-size: 25px;
+    font-size: 20px;
     color: #fff;
     border:none;
     background-color: rgba(94, 131, 209, 0.705);
     border-radius: 3px;
-    margin: 30px;
     box-shadow: 3px 4px 2px 1px rgba(0, 0, 255, .2);
     outline: none;
+}
+
+#start{
+    margin-right: 20px;
+    margin-bottom: 20px;
+}
+
+.touchControls {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.touchControls button {
+    background-image: url('../images/btn.png');
+    width: 50px;
+    height: 50px;
+    border-radius:50%;
+    background-position: center;
+    background-size: cover;
+    background-color: transparent;
+    color:royalblue;
+    font-weight: 700;
+    text-shadow: 1px 1px 4px rgb(250, 50, 50);
+    box-shadow: 0px 0px 20px 20px rgba(65, 105, 225, 0.329);
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 .container{
@@ -42,8 +152,8 @@ button{
     min-height: 400px;
     max-width: 200px;
     max-height: 400px;
+    margin-right: 10px;
 
-    margin-left: 50px;
 
     background-image: linear-gradient(
         to bottom,
@@ -71,8 +181,6 @@ button{
 
 .mini-grid{
     box-shadow: 3px 4px 2px 1px rgba(0, 0, 255, .2);
-    margin-left: 30px;
-    margin-right: 30px;
     min-width: 80px;
     min-height: 80px;
     max-width: 80px;
