--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,7 @@ button{
     border-radius: 3px;
     box-shadow: 3px 4px 2px 1px rgba(0, 0, 255, .2);
     outline: none;
+    
 }
 
 button:active {
@@ -122,10 +123,12 @@ button:active {
 }
 
 .touchControls {
+    margin-top: 10px;
+    padding: 10px;
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     justify-content: space-around;
-    align-items: center;
+    align-items: center; 
 }
 
 .touchControls button {
