--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ textarea,
 select {
   font: inherit;
 }
-
+/*=============the styles=================*/
 body{
     font-family: Roboto, serif;
     font-size: 12px;
@@ -122,6 +122,9 @@ button:active {
     margin-bottom: 20px;
 }
 
+#mute{
+    margin-left: 20px;
+}
 .touchControls {
     margin-top: 10px;
     padding: 10px;
