--- a/css/style.css
+++ b/css/style.css
@@ -69,10 +69,11 @@ select {
 /*=============the styles=================*/
 body{
     font-family: Roboto, serif;
-    font-size: 12px;
+    font-size: 11px;
     color: rgb(238, 190, 151);
     text-shadow: 1px 1px 4px rgb(250, 50, 50);
 }
+
 
 .mainContainer {
     margin-left: auto;
@@ -102,7 +103,7 @@ body{
 
 button{
     font-family: inherit;
-    font-size: 20px;
+    font-size: 15px;
     color: #fff;
     border:none;
     background-color: rgba(94, 131, 209, 0.705);
@@ -118,22 +119,20 @@ button:active {
 }
 
 #start{
-    margin-right: 20px;
+    margin-right: 10px;
     margin-bottom: 20px;
 }
 
 #mute{
-    margin-left: 20px;
-    width:80px;
+    margin-left: 10px;
+    width:60px;
   
 }
 .touchControls {
-    margin-top: 10px;
+    margin-top: 20px;
     padding: 10px;
-    display: flex;
-    /* flex-direction: column; */
-    justify-content: space-around;
-    align-items: center; 
+    display: inline-flex;
+    max-width: 100vw;
 }
 
 .touchControls button {
@@ -147,9 +146,9 @@ button:active {
     color:royalblue;
     font-weight: 700;
     text-shadow: 1px 1px 4px rgb(250, 50, 50);
-    box-shadow: 0px 0px 20px 20px rgba(65, 105, 225, 0.329);
-    margin-left: 30px;
-    margin-right: 30px;
+    box-shadow: 0px 0px 10px 10px rgba(65, 105, 225, 0.329);
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .container{
