--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ body{
 .mainContainer {
     margin-left: auto;
     margin-right: auto;
-    padding: 20px;
+    padding: 10px 5px 5px 5px;
     
     background-image: url("../images/bg.png");
     background-repeat: no-repeat;
