--- a/css/style.css
+++ b/css/style.css
@@ -67,149 +67,146 @@ select {
   font: inherit;
 }
 /*=============the styles=================*/
-body{
-    font-family: Roboto, serif;
-    font-size: 11px;
-    color: rgb(238, 190, 151);
-    text-shadow: 1px 1px 4px rgb(250, 50, 50);
+body {
+  font-family: Roboto, serif;
+  font-size: 11px;
+  color: rgb(238, 190, 151);
+  text-shadow: 1px 1px 4px rgb(250, 50, 50);
 }
-
 
 .mainContainer {
-    margin-left: auto;
-    margin-right: auto;
-    padding: 10px 5px 5px 5px;
-    
-    background-image: url("../images/bg.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    height: 100vh;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px 5px 5px 5px;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  background-image: url("../images/bg.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.displays{
-    display: flex;
-    font-display: row;
+.displays {
+  display: flex;
+  font-display: row;
 }
-.scoreLvlDsp{
-    margin-right: 20px;
+.scoreLvlDsp {
+  margin-right: 20px;
 }
 
-button{
-    font-family: inherit;
-    font-size: 15px;
-    color: #fff;
-    border:none;
-    background-color: rgba(94, 131, 209, 0.705);
-    border-radius: 3px;
-    box-shadow: 3px 4px 2px 1px rgba(0, 0, 255, .2);
-    outline: none;
-    
+button {
+  font-family: inherit;
+  font-size: 15px;
+  color: #fff;
+  border: none;
+  background-color: rgba(94, 131, 209, 0.705);
+  border-radius: 3px;
+  box-shadow: 3px 4px 2px 1px rgba(0, 0, 255, 0.2);
+  outline: none;
 }
 
 button:active {
-    transform: scale(0.9);
-    box-shadow: none;
+  transform: scale(0.9);
+  box-shadow: none;
 }
 
-#start{
-    margin-right: 10px;
-    margin-bottom: 20px;
+#start {
+  margin-right: 10px;
+  margin-bottom: 20px;
 }
 
-#mute{
-    margin-left: 10px;
-    width:60px;
-  
+#mute {
+  margin-left: 10px;
+  width: 60px;
 }
 .touchControls {
-    margin-top: 20px;
-    padding: 10px;
-    display: inline-flex;
-    max-width: 100vw;
+  margin-top: 20px;
+  padding: 10px;
+  display: inline-flex;
+  max-width: 100vw;
+}
+
+.touchControlArrow {
+  height: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .touchControls button {
-    background-image: url('../images/btn.png');
-    width: 50px;
-    height: 50px;
-    border-radius:50%;
-    background-position: center;
-    background-size: cover;
-    background-color: transparent;
-    color:royalblue;
-    font-weight: 700;
-    text-shadow: 1px 1px 4px rgb(250, 50, 50);
-    box-shadow: 0px 0px 10px 10px rgba(65, 105, 225, 0.329);
-    margin-left: 20px;
-    margin-right: 20px;
+  background-image: url("../images/btn.png");
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-position: center;
+  background-size: cover;
+  background-color: transparent;
+  color: royalblue;
+  font-weight: 700;
+  text-shadow: 1px 1px 4px rgb(250, 50, 50);
+  box-shadow: 0px 0px 10px 10px rgba(65, 105, 225, 0.329);
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
-.container{
-    display: flex;
-  
+.container {
+  display: flex;
 }
 
 .grid {
-    box-shadow: 3px 4px 2px 1px rgba(153, 153, 248, 0.2);
-    min-width: 200px;
-    min-height: 400px;
-    max-width: 200px;
-    max-height: 400px;
-    margin-right: 10px;
+  box-shadow: 3px 4px 2px 1px rgba(153, 153, 248, 0.2);
+  min-width: 200px;
+  min-height: 400px;
+  max-width: 200px;
+  max-height: 400px;
+  margin-right: 10px;
 
+  background-image: linear-gradient(to bottom, rgba(155, 211, 233, 0.521), rgba(233, 85, 17, 0.466));
 
-    background-image: linear-gradient(
-        to bottom,
-        rgba(155, 211, 233, 0.521),
-        rgba(233, 85, 17, 0.466)
-    );
-
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
-.grid div{
-    height: 20px;
-    width: 20px;
-
+.grid div {
+  height: 20px;
+  width: 20px;
 }
 
-.tetromino{
-    border-radius: 3px;
-   box-shadow: 3px 3px 1px rgba(211, 210, 210, 0.5) inset,
+.tetromino {
+  border-radius: 3px;
+  box-shadow:
+    3px 3px 1px rgba(211, 210, 210, 0.5) inset,
     -3px -3px 1px rgba(49, 49, 49, 0.5) inset;
 }
 
-.mini-grid{
-    box-shadow: 3px 4px 2px 1px rgba(0, 0, 255, .2);
-    min-width: 80px;
-    min-height: 80px;
-    max-width: 80px;
-    max-height: 80px;
+.mini-grid {
+  box-shadow: 3px 4px 2px 1px rgba(0, 0, 255, 0.2);
+  min-width: 80px;
+  min-height: 80px;
+  max-width: 80px;
+  max-height: 80px;
 
-    display: flex;
-    flex-wrap: wrap;
-    background-color:rgba(132, 214, 112, 0.568);
+  display: flex;
+  flex-wrap: wrap;
+  background-color: rgba(132, 214, 112, 0.568);
 }
 
-.mini-grid div{
-    height: 20px;
-    width: 20px;
+.mini-grid div {
+  height: 20px;
+  width: 20px;
 }
 
-.level{
-    margin-right: 30px;
+.level {
+  margin-right: 30px;
 }
 
 #hiScoreLine {
-    font-size: 15px;
+  font-size: 15px;
 }
