--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ body {
 .mainContainer {
   margin-left: auto;
   margin-right: auto;
-  padding: 10px 5px 5px 5px;
+  padding: 5px;
 
   background-image: url("../images/bg.png");
   background-repeat: no-repeat;
@@ -87,19 +87,22 @@ body {
 
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
 .displays {
   display: flex;
   font-display: row;
-}
-.scoreLvlDsp {
-  margin-right: 20px;
+  font-size: 15px;
+  font-weight: bold;
+  justify-content: space-evenly;
 }
 
-button {
+.displays > p:not(:last-child) {
+  margin-right: 15px;
+}
+
+.gameCtrlBtn {
   font-family: inherit;
   font-size: 15px;
   color: #fff;
@@ -110,7 +113,7 @@ button {
   outline: none;
 }
 
-button:active {
+.gameCtrlBtn:active {
   transform: scale(0.9);
   box-shadow: none;
 }
@@ -124,6 +127,7 @@ button:active {
   margin-left: 10px;
   width: 60px;
 }
+
 .touchControls {
   margin-top: 20px;
   padding: 10px;
@@ -139,10 +143,11 @@ button:active {
   justify-content: center;
 }
 
-.touchControls button {
-  background-image: url("../images/btn.png");
+.touchBtn {
+  /* background-image: url("../images/btn.png"); */
   width: 50px;
   height: 50px;
+  border: none;
   border-radius: 50%;
   background-position: center;
   background-size: cover;
@@ -153,6 +158,37 @@ button:active {
   box-shadow: 0px 0px 10px 10px rgba(65, 105, 225, 0.329);
   margin-left: 20px;
   margin-right: 20px;
+  outline: none;
+}
+
+.touchBtn:active {
+  box-shadow: 0px 0px 15px 15px rgba(65, 105, 225, 0.329);
+}
+
+#leftBtn {
+  background-image: url("../svg/clean/arrow-left-circle-svgrepo-com.svg");
+}
+
+#rotateBtn {
+  background-image: url("../svg/clean/arrow-down-circle-svgrepo-com.svg");
+  animation: rotateBackground 5s linear infinite;
+}
+
+#downBtn {
+  background-image: url("../svg/clean/arrow-down-circle-svgrepo-com.svg");
+}
+
+#rightBtn {
+  background-image: url("../svg/clean/arrow-right-circle-svgrepo-com.svg");
+}
+
+@keyframes rotateBackground {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 .container {
@@ -206,8 +242,4 @@ button:active {
 
 .level {
   margin-right: 30px;
-}
-
-#hiScoreLine {
-  font-size: 15px;
 }
