--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,17 @@ body {
   margin-right: 15px;
 }
 
+.gameCtrlBtns {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+  touch-action: manipulation;
+}
+
+.gameCtrlBtn:not(:last-child) {
+  margin-right: 10px;
+}
+
 .gameCtrlBtn {
   font-family: inherit;
   font-size: 15px;
@@ -111,6 +122,7 @@ body {
   border-radius: 3px;
   box-shadow: 3px 4px 2px 1px rgba(0, 0, 255, 0.2);
   outline: none;
+  touch-action: manipulation;
 }
 
 .gameCtrlBtn:active {
@@ -118,29 +130,11 @@ body {
   box-shadow: none;
 }
 
-#start {
-  margin-right: 10px;
-  margin-bottom: 20px;
-}
-
-#mute {
-  margin-left: 10px;
-  width: 60px;
-}
-
 .touchControls {
-  margin-top: 20px;
+  margin-top: 10px;
   padding: 10px;
   display: inline-flex;
   max-width: 100vw;
-}
-
-.touchControlArrow {
-  width: 100%;
-  height: 48px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .touchBtn {
